tests/errors/dprod_01.f90
program dprod_01
    print*, dprod(4.23_8, 4.3_8)
end program
